--- a/cysar/CMakeLists.txt
+++ b/cysar/CMakeLists.txt
@@ -39,7 +39,8 @@ find_package(rosidl_default_generators REQUIRED)
 set(rel_msg_files "")
 file(GLOB msg_files msg/*.msg)
 foreach(file ${msg_files})
-  file(RELATIVE_PATH rel_msg_path "/home/cysar/Software/carlAutoROS/cysar/" ${file})
+  # file(RELATIVE_PATH rel_msg_path "/home/cysar/Software/carlAutoROS/cysar/" ${file})
+  file(RELATIVE_PATH rel_msg_path "/home/ecabelin/carlAutoROS/cysar/" ${file})
   set(rel_msg_files "${rel_msg_files}" "${rel_msg_path}")
 endforeach()
 
